<resources>
    <string name="app_name">            CS3218Omar</string>
    <string name="goToMainActivity">    Back To Main</string>
    <string name="action_settings">     Settings</string>

    <string name="calcName">            Simple Calculator (Tutorial 1)</string>
    <string name="allclear">            AC</string>
    <string name="clear">               C</string>
    <string name="sqrt">                \u221a</string>
    <string name="mas">                 +</string>
    <string name="menos">               -</string>
    <string name="equals">              =</string>
    <string name="multiply">            X</string>
    <string name="divide">              /</string>
    <string name="punto">               .</string>
    <string name="cero">                0</string>
    <string name="uno">                 1</string>
    <string name="dos">                 2</string>
    <string name="tres">                3</string>
    <string name="cuatro">              4</string>
    <string name="cinco">               5</string>
    <string name="seis">                6</string>
    <string name="siete">               7</string>
    <string name="ocho">                8</string>
    <string name="nueve">               9</string>

    <string name="graphName">           Graphing (Tutorial 2)</string>
    <string name="graph_activity_label">Graph Plotting</string>
    <string name="sine">                Sine</string>
    <string name="cosine">              Cosine</string>
    <string name="Aplus">               A+</string>
    <string name="Aminus">              A-</string>
    <string name="Pplus">               P+</string>
    <string name="Pminus">              P-</string>
    <string name="Fplus">               F+</string>
    <string name="Fminus">              F-</string>
    <string name="fft">                 FFT</string>
    <string name="compositeFunction">   Composite Function</string>

    <string name="soundName">           Sound (Tutorial 3)</string>
    <string name="capture_sound">       Capture Sound</string>

    <string name="calculusName">        Calculus (Tutorial 4)</string>

    <!-- for FFT Activity (Tutorial 5a) -->
    <string name="goToFFTActivity">     FFT (Tutorial 5a)</string>
    <string name="fft_activity_label">  FFT</string>

    <!-- for Live FFT Activity (Tutorial 5b) -->
    <string name="goToLiveFFTActivity">         Live FFT (Tutorial 5b)</string>
    <string name="live_fft_activity_label">     Live FFT on Sound</string>

    <!-- for Spectrogram Activity (Tutorial 5c) -->
    <string name="goToSpectrogramActivity">     Spectrogram (Tutorial 5c)</string>
    <string name="spectrogram_activity_label">  Spectrogram</string>
</resources>
